# fluxim

./: CMakeLists.txt  README.md  conanfile.txt  plot_move_to_build.py
include/local/: cons.h  globals.h  init.h  loop.h  matrix.h  read.h  residual.h  response.h  system.h  vectors.h
src/: CMakeLists.txt  cons.cpp  init.cpp  loop.cpp  main.cpp  matrix.cpp  read.cpp  residual.cpp  response.cpp  system.cpp  vectors.cpp
tests/: L.txt  L_dc.txt
